<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Unique Passwords</string>

    <string name="title_domain">Domain</string>
    <string name="title_username">Username</string>
    <string name="title_master_password">Master password</string>
    <string name="title_advanced_options">Show advanced options</string>

    <string name="title_settings">Settings</string>

    <string name="title_general_settings">General settings</string>
    <string name="title_used_characters">Used characters</string>
    <string name="title_cached_accounts">Cached accounts</string>

    <string name="title_password_length">Password length</string>
    <string name="title_hash_algorithm">Hash algorithm</string>

    <string name="title_char_lowercase">Lowercase</string>
    <string name="title_char_uppercase">Uppercase</string>
    <string name="title_char_number">Number</string>
    <string name="title_char_special">Special</string>

    <string name="text_characters">characters</string>

    <string name="action_add_account">Add account</string>
    <string name="action_delete_account">Forget this account</string>
    <string name="action_delete_account_confirm">Really forget this account?</string>

    <string name="default_char_lowercase">abcdefghijklmnopqrstuvwxyz</string>
    <string name="default_char_uppercase">ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="default_char_number">0123456789</string>
    <string name="default_char_special">!"#$%&amp;'()*+,-./:;&lt;=&gt;?@[\]^_`{|}~</string>

    <string name="error_json_exception">Failed to parse cache account config!</string>
    <string name="error_field_empty">Field empty!</string>
    <string name="error_validation_failed">Validation failed!</string>
    <string name="error_domain_must_defined">Domain must be defined!</string>
    <string name="error_characters_not_selected">One character group must be selected!</string>

    <string name="msg_copied_to_clipboard">Copied to clipboard.</string>
    <string name="msg_wave_phone">Wave the phone to randomize used characters</string>
</resources>
